--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,17 @@ code {
 a {
   text-decoration: none;
 }
+
+.BtnGreen {
+  background-color: rgb(100, 191, 39) !important;
+  color: white !important;
+}
+
+.BtnRed {
+  background-color: rgb(216, 60, 60) !important;
+  color: white !important;
+}
+
+.BtnGreen .BtnRed :focus {
+  background-color: black !important;
+}
