--- a/Web/src/index.css
+++ b/Web/src/index.css
@@ -15,9 +15,19 @@ code {
     monospace;
 }
 
+
+
 a {
-  text-decoration: none;
+  text-decoration: line-through;
 }
+
+.bg-main {
+  width: 100%;
+  background-color: rgb(245,126,68);
+  background:linear-gradient(180deg, rgba(245,126,68,1) 0%, rgba(254,241,224,1) 80%, rgba(255,255,255,1) 100%);
+  padding: 15px;
+}
+
 
 .BtnGreen {
   background-color: rgb(100, 191, 39) !important;
